--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -12,6 +12,10 @@ ru:
       index: "Товары"
       new: "Создание нового товара"
       edit: "Редактирование товара"
+    promotions:
+      index: "Акции и новости"
+      new: "Создание новой новости"
+      edit: "Редактирование новости"
   activerecord:
     models:
       page: Страница
