--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -66,3 +66,10 @@ ru:
         name: Название
         text: Текст
         position: Показывать в
+  views:
+    pagination:
+      first: '<<'
+      last: '>>'
+      previous: '<'
+      next: '>'
+      truncate: '...'
